Add dashboard all code ,http and https proxy part code.
